--- a/discipleship.html
+++ b/discipleship.html
@@ -18,11 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=338000515"/>
-  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=3920360954" id="pagesheet"/>
-  <!-- IE-only CSS -->
-  <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138" id="nomq_pagesheet"/>
-  <![endif]-->
+  <link rel="stylesheet" type="text/css" href="css/discipleship.css?crc=35240230" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -32,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/uxxNwDE7GCpEc3c6Pmr5hRx8mkfP8EoQlOqwoFJzwa6feCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMg15no3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/nPbcpKMmJQYPcVkTW7X4T9Yr4k8zeqndi3h7zTXc2a9feCJgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MKGHfFhzMsMMeMw6MqGIQWmDZZMgrjx_3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -98,13 +94,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
    </div>
    <a class="anchor_item grpelem" id="top"></a>
-   <div class="clearfix grpelem" id="pu6188"><!-- group -->
-    <div class="grpelem" id="u6188"><!-- simple frame --></div>
+   <div class="clearfix grpelem" id="pu18040-4"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U18040-BP_infinity" template="discipleship.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="Title clearfix grpelem" id="u18040-4" data-muse-uid="U18040" data-muse-type="txt_frame"><!-- content -->
+    <div class="Title clearfix colelem" id="u18040-4" data-muse-uid="U18040" data-muse-type="txt_frame"><!-- content -->
      <h1>DISCIPLESHIP</h1>
     </div>
     <!-- /m_editable -->
+    <div class="colelem" id="u6188"><!-- simple frame --></div>
    </div>
    <div class="verticalspacer" data-offset-top="441" data-content-above-spacer="441" data-content-below-spacer="81"></div>
    <a class="nonblock nontext clearfix grpelem" id="u5290-4" href="index.html" data-href="page:U782"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
