--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home Page</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=119435265" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=45683614" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -27,7 +27,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/r1VfQwIylhmb16tWEl_q4NNe4MlwRrXFzn75iB2lgtqfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAukSku8jWZ8SkGHfwQpMsMMeMb6MqGIQWmDZZMgq0no3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/SsmDbesatql-uRqRVeP8k7J71Gukh5x92kobLmJ9AQjfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAukSku8jWZ8SkGHfwQpMsMMeMb6MqGIQWmDZZMgvJx_3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -37,11 +37,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <!-- m_editable region-id="editable-static-tag-U5118-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
-   <div class="clearfix grpelem" id="u5118-3" data-muse-uid="U5118" data-muse-type="txt_frame"><!-- content -->
-    <p>&nbsp;</p>
-   </div>
-   <!-- /m_editable -->
    <div class="clearfix grpelem" id="pu2863-3"><!-- group -->
     <div class="browser_width grpelem" id="u2863-3-bw">
      <!-- m_editable region-id="editable-static-tag-U2863-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
@@ -120,9 +115,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <!-- m_editable region-id="editable-static-tag-U799-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
-   <div class="Title clearfix grpelem" id="u799-4" data-muse-uid="U799" data-muse-type="txt_frame"><!-- content -->
-    <h1>Becoming all God created you to be</h1>
+   <!-- m_editable region-id="editable-static-tag-U25110-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
+   <div class="rgba-background Title clearfix grpelem" id="u25110-4" data-muse-uid="U25110" data-muse-type="txt_frame"><!-- content -->
+    <h1 id="u25110-2">Becoming all God created you to be</h1>
    </div>
    <!-- /m_editable -->
    <div class="verticalspacer" data-offset-top="718" data-content-above-spacer="718" data-content-below-spacer="0"></div>
