--- a/openlife.html
+++ b/openlife.html
@@ -18,11 +18,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
   <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=338000515"/>
-  <link rel="stylesheet" type="text/css" href="css/openlife.css?crc=3959457126" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/openlife.css?crc=444408347" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_openlife.css?crc=3980102115" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_openlife.css?crc=4083860297" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/r3UdABVU3CDIC3fJtsDlmuWFw7mozoj_IBgKT0nOwbSfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFhzMsMMeMw6MqGIQWmDZZMgG5no3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/wGdG1vWQYftRYLC2_0t_Pu0AK7Bf9HFX7lu3H-cWlGwfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgxjx_3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -88,16 +88,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <a class="anchor_item grpelem shared_content" id="top" data-content-guid="top_content"></a>
     </div>
-    <div class="clearfix grpelem shared_content" id="pu6188" data-content-guid="pu6188_content"><!-- group -->
-     <div class="grpelem" id="u6188"><!-- simple frame --></div>
+    <div class="clearfix grpelem" id="pu5666-4"><!-- column -->
      <!-- m_editable region-id="editable-static-tag-U5666-BP_infinity" template="openlife.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="Title clearfix grpelem" id="u5666-6" data-muse-uid="U5666" data-muse-type="txt_frame"><!-- content -->
-      <h1>OpenLife</h1>
-      <h1>Groups</h1>
+     <div class="Title clearfix colelem shared_content" id="u5666-4" data-muse-uid="U5666" data-muse-type="txt_frame" data-content-guid="u5666-4_content"><!-- content -->
+      <h1>OpenLife Groups</h1>
      </div>
      <!-- /m_editable -->
+     <div class="colelem shared_content" id="u6188" data-content-guid="u6188_content"><!-- simple frame --></div>
     </div>
-    <div class="verticalspacer" data-offset-top="89" data-content-above-spacer="89" data-content-below-spacer="81"></div>
+    <div class="verticalspacer" data-offset-top="76" data-content-above-spacer="88" data-content-below-spacer="81"></div>
     <a class="nonblock nontext rounded-corners clearfix grpelem shared_content" id="u5290-4" href="index.html" data-href="page:U782" data-content-guid="u5290-4_content"><!-- content --><p id="u5290-2">RETURN HOME</p></a>
    </div>
   </div>
@@ -129,7 +128,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <span class="clearfix grpelem placeholder" data-placeholder-for="pu6188_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem" id="pu6188"><!-- group -->
+     <span class="grpelem placeholder" data-placeholder-for="u6188_content"><!-- placeholder node --></span>
+     <!-- m_editable region-id="editable-static-tag-U5666-BP_381" template="openlife.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <span class="Title clearfix grpelem placeholder" data-placeholder-for="u5666-4_content"><!-- placeholder node --></span>
+     <!-- /m_editable -->
+    </div>
     <span class="anchor_item grpelem placeholder" data-placeholder-for="top_content"><!-- placeholder node --></span>
     <div class="verticalspacer" data-offset-top="78" data-content-above-spacer="88" data-content-below-spacer="81"></div>
     <span class="nonblock nontext rounded-corners clearfix grpelem placeholder" data-placeholder-for="u5290-4_content"><!-- placeholder node --></span>
