--- a/keys-to-discipleship.html
+++ b/keys-to-discipleship.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Keys to Discipleship</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=338000515"/>
-  <link rel="stylesheet" type="text/css" href="css/keys-to-discipleship.css?crc=4053548157" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3923171601"/>
+  <link rel="stylesheet" type="text/css" href="css/keys-to-discipleship.css?crc=184057032" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_master.css?crc=3824530138"/>
@@ -33,7 +33,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/5PYBtAAJ9C8V8F5YiKEyk8bvapUvbcgKEnfC43tAPTwfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgCpno3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/gYuXQ8MQh4PjSpj5YyLLRvEel_t0E2Kgucn5L_AgAf3fenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgROD_3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -45,22 +45,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="breakpoint active" id="bp_infinity" data-min-width="431"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox" id="page"><!-- group -->
     <div class="PamphletWidget clearfix grpelem" id="pamphletu20396"><!-- none box -->
-     <div class="ThumbGroup clearfix grpelem" id="u20398"><!-- none box -->
-      <div class="popup_anchor" id="u20399popup">
-       <div class="Thumb popup_element clearfix" id="u20399"><!-- column -->
-        <div class="colelem shared_content" id="u20401" data-content-guid="u20401_content"><!-- simple frame --></div>
-        <div class="colelem shared_content" id="u20402" data-content-guid="u20402_content"><!-- simple frame --></div>
-        <div class="colelem shared_content" id="u20400" data-content-guid="u20400_content"><!-- simple frame --></div>
-       </div>
-      </div>
-     </div>
      <div class="popup_anchor" id="u20403popup">
       <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
        <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
         <div class="clearfix grpelem shared_content" id="pu20416-3" data-content-guid="pu20416-3_content"><!-- column -->
-         <div class="museBGSize clearfix colelem" id="u20416-3"><!-- content -->
-          <p>&nbsp;</p>
-         </div>
+         <a class="nonblock nontext museBGSize clearfix colelem" id="u20416-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
          <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
          <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg temp_no_img_src" id="u20415" data-orig-src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
         </div>
@@ -75,6 +64,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <a class="nonblock nontext clip_frame grpelem" id="u20412" href="tel:(08)85225269"><!-- svg --><img class="svg temp_no_img_src" id="u20413" data-orig-src="images/pasted-svg-109665x1093.svg?crc=4186153669" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_3.png?crc=4204566227" data-image-width="60" data-image-height="60" src="images/blank.gif?crc=4208392903"/></a>
          </div>
         </div>
+       </div>
+      </div>
+     </div>
+     <div class="ThumbGroup clearfix grpelem" id="u20398"><!-- none box -->
+      <div class="popup_anchor" id="u20399popup">
+       <div class="Thumb popup_element clearfix" id="u20399"><!-- column -->
+        <div class="colelem shared_content" id="u20401" data-content-guid="u20401_content"><!-- simple frame --></div>
+        <div class="colelem shared_content" id="u20402" data-content-guid="u20402_content"><!-- simple frame --></div>
+        <div class="colelem shared_content" id="u20400" data-content-guid="u20400_content"><!-- simple frame --></div>
        </div>
       </div>
      </div>
@@ -100,21 +98,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="breakpoint" id="bp_430" data-max-width="430"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
     <div class="PamphletWidget clearfix grpelem temp_no_id" data-orig-id="pamphletu20396"><!-- none box -->
-     <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u20398"><!-- none box -->
-      <div class="popup_anchor temp_no_id" data-orig-id="u20399popup">
-       <div class="Thumb popup_element clearfix temp_no_id" data-orig-id="u20399"><!-- column -->
-        <span class="colelem placeholder" data-placeholder-for="u20401_content"><!-- placeholder node --></span>
-        <span class="colelem placeholder" data-placeholder-for="u20402_content"><!-- placeholder node --></span>
-        <span class="colelem placeholder" data-placeholder-for="u20400_content"><!-- placeholder node --></span>
-       </div>
-      </div>
-     </div>
      <div class="popup_anchor temp_no_id" data-orig-id="u20403popup">
       <div class="ContainerGroup clearfix temp_no_id" data-orig-id="u20403"><!-- stack box -->
        <div class="Container invi clearfix grpelem temp_no_id" data-orig-id="u20404"><!-- group -->
         <span class="clearfix grpelem placeholder" data-placeholder-for="pu20416-3_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u20408-4_content"><!-- placeholder node --></span>
         <span class="clearfix grpelem placeholder" data-placeholder-for="pu22548-4_content"><!-- placeholder node --></span>
+       </div>
+      </div>
+     </div>
+     <div class="ThumbGroup clearfix grpelem temp_no_id" data-orig-id="u20398"><!-- none box -->
+      <div class="popup_anchor temp_no_id" data-orig-id="u20399popup">
+       <div class="Thumb popup_element clearfix temp_no_id" data-orig-id="u20399"><!-- column -->
+        <span class="colelem placeholder" data-placeholder-for="u20401_content"><!-- placeholder node --></span>
+        <span class="colelem placeholder" data-placeholder-for="u20402_content"><!-- placeholder node --></span>
+        <span class="colelem placeholder" data-placeholder-for="u20400_content"><!-- placeholder node --></span>
        </div>
       </div>
      </div>
@@ -141,7 +139,7 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity', '#bp_430'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_trigger',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
+Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity', '#bp_430'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
 $( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
