--- a/sermon.html
+++ b/sermon.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Sermon</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3866580668"/>
-  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=338000515"/>
-  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=417100556" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_master.css?crc=3923171601"/>
+  <link rel="stylesheet" type="text/css" href="css/sermon.css?crc=304610357" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/open-sans:n4:default;abel:n4:default.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/aGRa0ItbQwIHoecgc6RAFjRr4RDz8VPwAq0Np5SG13wfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgNJx_3b9.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/yAa4eLQbg91n3wPy6Zq1jRBrLZRaIKM7HrSZtxooS4tfenjgfO-IbgJGwQMX5QIXw8vDwAwoFR6U5AsKZAmRFRSDZAZq52qajQbujh9DFA485sTKHKoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9CjcBR-aFXjAi8OciyihU8S1m0-WsTdcS0da41OcBuOYiaikoKjAFnSasyZh90ZhBademkiAoTie80ZkozScS0jW9KfAZTScIlShB0SkGHfFczMsMMeMb6MqGIQWmDZZMgrOz_3b9.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -39,22 +39,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 
   <div class="clearfix borderbox" id="page"><!-- group -->
    <div class="PamphletWidget clearfix grpelem" id="pamphletu20396"><!-- none box -->
-    <div class="ThumbGroup clearfix grpelem" id="u20398"><!-- none box -->
-     <div class="popup_anchor" id="u20399popup">
-      <div class="Thumb popup_element clearfix" id="u20399"><!-- column -->
-       <div class="colelem" id="u20401"><!-- simple frame --></div>
-       <div class="colelem" id="u20402"><!-- simple frame --></div>
-       <div class="colelem" id="u20400"><!-- simple frame --></div>
-      </div>
-     </div>
-    </div>
     <div class="popup_anchor" id="u20403popup">
      <div class="ContainerGroup clearfix" id="u20403"><!-- stack box -->
       <div class="Container invi clearfix grpelem" id="u20404"><!-- group -->
        <div class="clearfix grpelem" id="pu20416-3"><!-- column -->
-        <div class="museBGSize clearfix colelem" id="u20416-3"><!-- content -->
-         <p>&nbsp;</p>
-        </div>
+        <a class="nonblock nontext museBGSize clearfix colelem" id="u20416-3" href="index.html" data-href="page:U782"><!-- content --><p>&nbsp;</p></a>
         <a class="nonblock nontext clearfix colelem" id="u22578-4" href="featured.html" data-href="page:U19221"><!-- content --><p id="u22578-2">FEATURED</p></a>
         <a class="nonblock nontext clip_frame colelem" id="u20414" href="http://gawleruniting.org.au"><!-- svg --><img class="svg" id="u20415" src="images/pasted-svg-109665x109.svg?crc=3939634654" alt="" data-mu-svgfallback="images/pasted%20svg%20109665x109_poster_.png?crc=4011030576" data-image-width="60" data-image-height="60"/></a>
        </div>
@@ -72,6 +61,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
+    <div class="ThumbGroup clearfix grpelem" id="u20398"><!-- none box -->
+     <div class="popup_anchor" id="u20399popup">
+      <div class="Thumb popup_element clearfix" id="u20399"><!-- column -->
+       <div class="colelem" id="u20401"><!-- simple frame --></div>
+       <div class="colelem" id="u20402"><!-- simple frame --></div>
+       <div class="colelem" id="u20400"><!-- simple frame --></div>
+      </div>
+     </div>
+    </div>
     <div class="popup_anchor" id="u20418popup">
      <div class="PamphletCloseButton PamphletLightboxPart popup_element clearfix" id="u20418"><!-- group -->
       <div class="grpelem" id="u20419" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.7071,M12=0.7071,M21=-0.7071,M22=0.7071,SizingMethod='auto expand')" data-mu-ie-matrix-dx="3" data-mu-ie-matrix-dy="-9"><!-- simple frame --></div>
@@ -80,7 +78,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <div class="grpelem" id="u17434"><!-- custom html -->
-    <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fgawlerunitingchurch%2Fvideos%2F1532637536746724%2F&width=305&show_text=false&height=176&appId" width="305" height="176" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+    <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/3zlzdpi46EU' frameborder='0' allowfullscreen></iframe></div>
+
    </div>
    <div class="clearfix grpelem" id="pu5460"><!-- column -->
     <div class="clearfix colelem" id="u5460"><!-- group -->
@@ -91,7 +90,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <!-- /m_editable -->
     </div>
     <!-- m_editable region-id="editable-static-tag-U19132-BP_infinity" template="sermon.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix colelem" id="u19132-4" href="https://www.youtube.com/channel/UC44DwSdF8JOYxk0Km4qw6Gw" data-muse-uid="U19132" data-muse-type="txt_frame"><!-- content --><p><span id="u19132">Click for more resources</span></p></a>
+    <a class="nonblock nontext clearfix colelem" id="u19132-4" href="https://www.youtube.com/channel/UC44DwSdF8JOYxk0Km4qw6Gw" data-muse-uid="U19132" data-muse-type="txt_frame"><!-- content --><p><span id="u19132">Click for more videos</span></p></a>
     <!-- /m_editable -->
    </div>
    <div class="grpelem" id="u17438"><!-- custom html -->
@@ -131,7 +130,7 @@ window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_trigger',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
+Muse.Utils.initWidget('#pamphletu20396', ['#bp_infinity'], function(elem) { return new WebPro.Widget.ContentSlideShow(elem, {contentLayout_runtime:'stack',event:'click',deactivationEvent:'mouseout_both',autoPlay:false,displayInterval:3000,transitionStyle:'fading',transitionDuration:500,hideAllContentsFirst:true,shuffle:false,enableSwipe:true,resumeAutoplay:true,resumeAutoplayInterval:3000,playOnce:false,autoActivate_runtime:false}); });/* #pamphletu20396 */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
